--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
 body {
   background-color: #f9e7a6;
 }
+
+h1 {
+  margin-top: 60px;
+  margin-bottom: 35px;
+  font-size: 72px;
+  text-align: center;
+}
+
+hr {
+  border: 2px solid #fea900;
+  width: 700px;
+  border-radius: 10px;
+  display: block;
+  margin: auto;
+}
+
+.info {
+  font-size: 20px;
+  margin: 50px 30px;
+  font-family: sans-serif;
+  line-height: 38px;
+  text-align: center;
+}
